[gd_scene load_steps=9 format=3 uid="uid://canim_viewer"]

[ext_resource type="Script" path="res://scripts/tests/animation_viewer.gd" id="1_viewer"]
[ext_resource type="Script" path="res://scripts/tests/orbit_camera.gd" id="2_orbit_camera"]
[ext_resource type="PackedScene" uid="uid://cpmgyp4xd80ck" path="res://assets/characters/gsg9/gsg9.fbx" id="3_character"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.3, 0.3, 0.35, 1)
ambient_light_source = 2
ambient_light_color = Color(0.6, 0.6, 0.65, 1)
ambient_light_energy = 0.5

[sub_resource type="PlaneMesh" id="PlaneMesh_1"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.4, 0.4, 0.45, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(20, 0.1, 20)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_char"]
radius = 0.3
height = 1.8

[node name="AnimationViewer" type="Node3D"]
script = ExtResource("1_viewer")

[node name="CharacterBody" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0)
shape = SubResource("CapsuleShape3D_char")

[node name="CharacterModel" parent="CharacterBody" instance=ExtResource("3_character")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="OrbitCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 5)
script = ExtResource("2_orbit_camera")
distance = 5.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 5, 10, 5)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("PlaneMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 1000.0
grow_horizontal = 0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
